# sfml_demo

./: CMakeLists.txt  README.md
Header/: Aquamentus.h  BladeTrap.h  Enemy.h  Entity.h  Game.h  Goriya.h  Keese.h  Level.h  Loader.h  Map.h  Player.h  Stalfos.h  Tile.h  Wallmaster.h
Maps/: 0_1.map  0_2.map  1_2.map  1_4.map  1_5.map  2_0.map  2_1.map  2_2.map  2_3.map  2_4.map  3_1.map  3_2.map  3_3.map  4_2.map  5_1.map  5_2.map  5_3.map
Source/: Game.cpp  Level.cpp  Loader.cpp  Map.cpp  Player.cpp  Tile.cpp  main.cpp
Textures/: Black_dragon.png~  Black_frog.png~  Blue_dragon.png~  Blue_frog.png~  Door_down.png~  Door_left.png~  Door_right.png~  Door_up.png~  Player_down_move_1.png~  Player_left_move_1.kra  Stairs.png~
